feat: Adding Dynamic Config + EmbedUtils